infrastructure/reference/frontend-dc.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: frontend
  namespace: 61d198-dev
spec:
  selector:
    app: bcparks-online
  replicas: 3
  template:
    metadata:
      labels:
        app: bcparks-online
    spec:
      containers:
        - name: frontend
          image: >-
            image-registry.openshift-image-registry.svc:5000/61d198-tools/frontend:dev
          ports:
            - containerPort: 8080
            - containerPort: 3000
