infrastructure/reference/database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bcpcmsdb
  namespace: 61d198-dev
spec:
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    name: bcpcmsdb
