infrastructure/reference/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bcpfrontend
  namespace: 61d198-dev
spec:
  selector:
    app: bcparks-online
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
