infrastructure/reference/allow-internal-traffic.np.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-internal-traffic
  namespace: 61d198-dev
spec:
  podSelector: {}
  ingress:
    - ports:
        - protocol: TCP
          port: 1337
        - protocol: TCP
          port: 3000
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 8000
        - protocol: TCP
          port: 5000
  policyTypes:
    - Ingress
